--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* Styling of the tool (ex. colour, font size, etc.) */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
